Modification du fichier .gitignore et ajout d'une fonction permettant de trouver la décomposition d'une matrice en deux matrices triangulaires pour procéder à la méthode de Cholesky ultérieurement

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,4 @@
 TP1 - Dichotomie/executable
+TP1 - Dichotomie/executable.bin
 TP2 - Resolution de systemes lineaires/executable
+TP2 - Resolution de systemes lineaires/executable.bin
