Modification du fichier .gitignore pour ignorer les fichiers temporaires et exécutables.

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,2 @@
-TP1 - Dichotomie/executable
-TP1 - Dichotomie/executable.bin
-TP2 - Resolution de systemes lineaires/executable
-TP2 - Resolution de systemes lineaires/executable.bin
+*/executable
+*/executable.bin
